--- a/.localization-config
+++ b/.localization-config
@@ -9,7 +9,7 @@
          },
          "priorities":[  
             {  
-               "priority":"high",
+               "priority":"AcomDC_HI",
                "locales":[  
                   "de-de",
                   "nl-nl",
@@ -25,7 +25,7 @@
          ],
          "priorities":[  
             {  
-               "priority":"non_HI",
+               "priority":"AcomDC_nonHI",
                "locales":[  
                
                   "ja-jp",
