--- a/.localization-config
+++ b/.localization-config
@@ -35,7 +35,7 @@
          ]
       }
    ],
-  "includeDependencies": false,
+  "includeDependencies": true,
   "autoPush": false,
   "xliffVersion": "1.2"
 }
