--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,16 +1,10 @@
 {
-    "build_entry_point": "",
-    "docsets_to_publish": [
-        {
-            "docset_name": "hyperVVsc",
-            "build_output_subfolder": "virtualization",
-            "locale": "en-us",
-            "version": 0,
-            "open_to_public_contributors": "false",
-            "type_mapping": {
-                "Conceptual": "Content"
-            }
-        }
-    ],
-    "notification_subscribers": ["zhenjiao@microsoft.com"]
+  "build_entry_point": "",
+  "need_generate_pdf": false,
+  "need_generate_intellisense": false,
+  "docsets_to_publish": [],
+  "notification_subscribers": [
+    "zhenjiao@microsoft.com"
+  ],
+  "skip_source_output_uploading": false
 }
